--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 				<button class="number" id="2">2</button>
 				<button class="number" id="3">3</button>
 				<button class="operator" id="+">+</button>
-				<button class="empty" id="empty"><img src="./images/Kenny.jpg"/></button>
+				<button class="empty" id="empty"></button>
 				<button class="number" id="0">0</button>
 				<button class="empty" id="empty"></button>
 				<button class="operator" id="=">=</button>
